--- a/styling.css
+++ b/styling.css
@@ -6,6 +6,7 @@
     border: 1px solid black; 
     width: 600px; 
     height: 600px;
+    max-height: 600px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -55,22 +56,25 @@ h1 {
     font-size: 28px;
 }
 
-form {
+/***********************/
+/*** General Styling ***/
+/***********************/
+
+.add-form {
     display: flex;
     flex-direction: column;
     padding: 10px;
     margin-bottom: 10px;
 }
 
-/***********************/
-/*** General Styling ***/
-/***********************/
-
 .class-list {
     width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-height: 110px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .class-list-header {
