--- a/styling.css
+++ b/styling.css
@@ -5,8 +5,8 @@
 #root {
     border: 1px solid black; 
     width: 600px; 
-    height: 600px;
-    max-height: 600px;
+    height: 700px;
+    max-height: 700px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -24,11 +24,11 @@
 /********************/
 
 header {
-    flex-basis: 20%;
+    flex: 20%;
 }
 
 nav {
-    flex: 1 1 20%;
+    flex: 20%;
     font-size: 20px;
     padding: 20px;
 
@@ -37,14 +37,13 @@ nav {
 }
 
 main {
-    flex: 1 1 80%;
+    flex: 80%;
     font-size: 16px;
     padding: 20px;
 }
 
 footer {
-    flex-basis: 10%;
-    flex-grow: 0.5;
+    flex: 10%;
     font-size: 20px;
 }
 
@@ -72,7 +71,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 110px;
+    max-height: 140px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -100,7 +99,7 @@ h1 {
 }
 
 .class-list-item > * {
-    flex-basis: 25%;
+    flex: 25%;
 }
 
 .flex-center-row {
@@ -127,4 +126,8 @@ h1 {
 
 .yellow {
     background-color: rgb(255, 255, 183);
+}
+
+.hide {
+    display: none;
 }
